data/derived/sp14/progs/unify/prog1533.ml.out
Characters 39-42:
  let _ = eval (Sine(Average(VarX,VarY)),0.5,-0.5);;
                                         ^^^
Error: This expression has type float but an expression was expected of type
         int
